# PosApp

./: .gitignore  README.md  api.Dockerfile  docker-compose.yml  package-lock.json
TS-Client/: README.md  env.production  index.html  package.json
TS-Client/src/: App.tsx  index.css  index.tsx
TS-Client/src-tauri/: Cargo.toml  store.db3  tauri.conf.json
TS-Client/src-tauri/src/: main.rs  store.db3
TS-Client/src-tauri/src/socket/: mod.rs
TS-Client/src-tauri/src/socket/client/: mod.rs
TS-Client/src-tauri/src/socket/helper/: mod.rs
TS-Client/src-tauri/src/socket/room/: mod.rs
TS-Client/src/components/: Calculator.tsx  Items.tsx  Menu.tsx  Modal.tsx  Navbar.tsx  Notification.tsx  Profile.tsx  Ticket.tsx
TS-Client/src/context/: Models.ts  UserContext.tsx
TS-Client/src/pages/: Contact.tsx  CreateAccount.tsx  CreateOrder.tsx  Data.tsx  Home.tsx  Login.tsx  Orders.tsx  PageNotFound.tsx  Settings.tsx
cert/: cert.pem  fullchain.pem  privkey.pem
goApi/: .env  README.md  go.mod  go.sum  main.go  queries.sql  schema.sql
goApi/fiber_handler/: dependencies.go  root.go
goApi/models/: businessTable.go  db.go  item.go  order.go  other.go  user.go
goApi/socket/: helper.go  main.go  models.go
other/: default.conf  docker-compose.yml
other/examplesOfCode/: Chat.jsx  ChatRoom.jsx  README.md  context.jsx
reverse_proxy/: default.conf  nginx.conf
socket/: Cargo.toml
socket/src/: main.rs
socket/src/socket/: mod.rs
socket/src/socket/client/: mod.rs
socket/src/socket/helper/: mod.rs
socket/src/socket/room/: mod.rs
socket/src/socket/server/: mod.rs
