[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies.rusqlite]
version = "0.26.0"
features = ["bundled", "serde_json"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
online = "3.0.1"
lazy_static = "1.4.0"
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3.1", features = ["tls"] }
tokio-stream = "0.1.6"
futures = "0.3.15"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
dotenv = "0.15.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
